# ChangeLog for media-libs/openjpeg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/ChangeLog,v 1.68 2013/02/22 18:40:47 zmedico Exp $

  22 Feb 2013; Zac Medico <zmedico@gentoo.org> openjpeg-1.5.0.ebuild:
  Add ~arm-linux keyword.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> openjpeg-1.5.0.ebuild:
  keyword ~amd64-fbsd

  21 Apr 2012; Raúl Porcel <armin76@gentoo.org> openjpeg-1.5.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #409203

  11 Apr 2012; Jeremy Olexa <darkside@gentoo.org> openjpeg-1.5.0.ebuild:
  add prefix support (KEYWORDS only), as tested in the overlay. bug 411519

  31 Mar 2012; Markus Meier <maekke@gentoo.org> openjpeg-1.5.0.ebuild:
  arm stable, bug #409203

  25 Mar 2012; Brent Baude <ranger@gentoo.org> openjpeg-1.5.0.ebuild:
  Marking openjpeg-1.5.0 ppc for bug 409203

  25 Mar 2012; Brent Baude <ranger@gentoo.org> openjpeg-1.5.0.ebuild:
  Marking openjpeg-1.5.0 ppc64 for bug 409203

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> openjpeg-1.5.0.ebuild:
  x86 stable wrt bug #409203

  23 Mar 2012; Agostino Sarubbo <ago@gentoo.org> openjpeg-1.5.0.ebuild:
  Stable for amd64, wrt bug #409203

  22 Mar 2012; Jeroen Roovers <jer@gentoo.org> openjpeg-1.5.0.ebuild:
  Stable for HPPA (bug #409203).

  22 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> openjpeg-1.5.0.ebuild:
  RESTRICT testsuite temporarily wrt #409263. Thanks to Jeroen Roovers for
  reporting.

*openjpeg-1.5.0 (21 Mar 2012)

  21 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +openjpeg-1.5.0.ebuild,
  +files/openjpeg-1.5.0-build.patch:
  Version bump wrt #409203 by Agostino Sarubbo

  13 Nov 2011; Justin Lecher <jlec@gentoo.org> openjpeg-1.4-r1.ebuild:
  Corrected Slotting of media-libs/tiff and media-libs/libpng

  23 Oct 2011; Tim Harder <radhermit@gentoo.org>
  -files/openjpeg-1.1.1-Makefile.patch, -files/openjpeg-1.2-Makefile.patch,