@@ -9,13 +9,17 @@ AUX openjpeg-1.5.0-build.patch 2529 SHA256 be2e7ddbdfd4e9d8c73a5d5d56b318cdab083
 DIST openjpeg-1.5.0.tar.gz 2117572 SHA256 c9908fab44432a2ed2550c457cb7e736da6d7c326f1203d23d1082d992364ace SHA512 59501fde86a7f0ab5a1b7e369feb9c4dcb8ea67ead8ffd706592cbba1e0ee7b2a2a9aaa32778632febe0c3dc4171c7af738c5899c732eb420358df3b16d7cf47 WHIRLPOOL 5267edb2809ce8ed96b1a0680049e84c5edefff959b35017dc6d9f645ba180860f89f12dd32b629f777e272ae0c5a25dc2e72a8ff308c02c66ce709f07154865
 DIST openjpeg_v1_4_sources_r697.tgz 2365447 SHA256 493e4db087bf5c5485618a1e1cfd827c4fb2ad421a4342903b166b76cf094b73
 EBUILD openjpeg-1.4-r1.ebuild 1407 SHA256 e3432ae9d9487e2b5ac396aa4745dcb288a56a25f7acae3bfd572d42139c1c8d SHA512 98552b4da4c604a74d9cf9c403baa770dd7ac84a68e8de6fec5133f2afed492de96d37d6588b1523babd7dd6e8f3ffd7932ae75e3807559385cc821412b0a9d4 WHIRLPOOL 429f720349ace14bad35d11095252a9194bd22026770e53d71a74eb5f8e8ab745ef5de5c37c0d733dac797bd9cbac186a0f5b9d32d6e02093e58e777eab0cb55
-EBUILD openjpeg-1.5.0.ebuild 1364 SHA256 60c2fb8d7ec02e7b756d8e56e233c0fcb96e11399bdbf5d991112c3263d49e61 SHA512 95d21683eaacf2fd6178e73dd18db5d9cae866c4819dc84b3651e9b1b14a4b766560284dccc451bb00672b23135fed80e1ff0209109e0066145cd14c5988ec01 WHIRLPOOL 1c75a8311b24b0727b53336dfdd14309523659b9f871a7a2a13beb7b478d00766b7eec075d5fba2c40fb30bf343b13fc8f89fdcb1f36f561ea8e8f21ca63a95f
-MISC ChangeLog 9583 SHA256 374dc96c5a24c8cc8487d4c165dc7f3c590e6821308d67a5f79e12c76370a179 SHA512 a52d7bb070c91667ce2095000470f95be742252423d663fafecd164f2afed6a1501cf28827f2fa6f1fe7045808a6590c46f88c96dcff16e2871846b7f498b6fd WHIRLPOOL e6ade0bcb60deb0436f2818b6fdf360709efbaf4679deb2fac52481048d6d1428f3718eda4ad54664b757eca071da5164438dcc6839d8d3ec327eca86e26b558
+EBUILD openjpeg-1.5.0.ebuild 1371 SHA256 9591572691142c5cb4c1bce0e3ad92ae7fb165498bf858f592707cbb32f7a623 SHA512 5ef56f4cbb9c881d57d9739581ebdd2c69236e78e8d78e9e81eeab20d32b90eba0e032848203cf5b0864a8dcfe51fe10b8fd47ea49fc10400310aa257f833cef WHIRLPOOL 3833e33679156d594184e58feb17280228fdab0aeeae0bbfd504ce4ea064755e13a2e2d15ed43b44fca95d19437acf63f64338b17de0c7c030f030c282902b7b
+MISC ChangeLog 9727 SHA256 081126851c594d0f0ba7f5f90dadf1d55d8f0587813864b0d714d6998bd9b853 SHA512 3d5b1d8b0fefd3967b5184ae604d26c48041642a527495f06ad3b6104ab149ce89676ea64433a792353722f645bbd3e3562410f47f6dff0ed4d6912ffedcb45a WHIRLPOOL 56cc3a9c0b0cebd0b53815c11319777c08f1f9aedded5aba7d1015591508f35e14f8048489474a34de5f2da221d8828551c7a04453a92c5be3ae35945a295a16
 MISC metadata.xml 240 SHA256 798e4e23637a9ded9dae0967f92aa498b39ad088a555aa94b4f716ba040db68c SHA512 c12ab1993f8b10c50a87bf215eb22613dc54cf8f3c049877959228694afcb1e848d9e13247c376c249b39af35945775f736bcf956c7f50e3d49f456e621ef979 WHIRLPOOL b8b0ff194273de5396bfb4d13c2f169eb481dab034aee85f1ebca948babded8851a1cc6c6047e51b6a20bb40654be025677a9872da63526c78eaa64854436f8b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEnu7EACgkQ/ejvha5XGaODOQCfViEU/3R6bu7RgLLiUoBibkrm
-XK4AmwQSuIUV9eV9jEKFcB8ONm4C42NO
-=/75A
+iQEcBAEBCAAGBQJRX8SKAAoJEEdUh39IaPFNU88H/1G45OF8ZunhDLotWbJLpaho
+8lLqfxiczSgo0b1M72LJWnZG0esEMKBHp7+XzXIm/19IX34Z2WcqYsrG17hHUflH
+uEvbzO1yPheUq+DWpCdXT2bVbr28+BZe0SLCBSOfRnnkw16QUN/rsUqmRVCKRY7l
+ACjdM7pAmgDvvzNYGCJ+pFwVjtHQxPUkMUPzrbOlE+PUpsxJkrERgQIa9UKy0yr3
+P0arRRrZeLcVqVK7dSdKYV7+0rgerfTZB6kgKkod4A663gKXRXCE9lZepBuD3Pyy
+qsdplDGIxIzX6qUkvB7VP74js6B+3mMIYoDamrMLU6OXsYAeZQIF5IVQ8+MH5Js=
+=MBT3
 -----END PGP SIGNATURE-----
