@@ -1,8 +1,8 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/Attic/openjpeg-1.5.0.ebuild,v 1.12 2013/02/22 18:40:47 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/Attic/openjpeg-1.5.0.ebuild,v 1.13 2013/04/06 06:45:59 ssuominen Exp $
 
-EAPI=4
+EAPI=5
 inherit cmake-utils multilib
 
 DESCRIPTION="An open-source JPEG 2000 library"
@@ -14,10 +14,10 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
 IUSE="doc test"
 
-RDEPEND="media-libs/lcms:2
-	media-libs/libpng:0
-	media-libs/tiff:0
-	sys-libs/zlib"
+RDEPEND="media-libs/lcms:2=
+	media-libs/libpng:0=
+	media-libs/tiff:0=
+	sys-libs/zlib:="
 DEPEND="${RDEPEND}
 	doc? ( app-doc/doxygen )"
 
