@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/openjpeg
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/ChangeLog,v 1.68 2013/02/22 18:40:47 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/ChangeLog,v 1.69 2013/04/06 06:45:59 ssuominen Exp $
+
+  06 Apr 2013; Samuli Suominen <ssuominen@gentoo.org> openjpeg-1.5.0.ebuild:
+  Use subslotting for lcms, libpng, tiff and zlib dependencies.
 
   22 Feb 2013; Zac Medico <zmedico@gentoo.org> openjpeg-1.5.0.ebuild:
   Add ~arm-linux keyword.
